--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,3 @@
-language:
-	node_js
-before_script:
-	npm install --dev
-script:
-	npm test
+language: node_js
+before_script: npm install --dev
+script: npm test
