--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,8 @@
-language: node_js
-before_script: npm install --dev
-script: npm test
+language:
+  - node_js
+node_js:
+  - "node"
+before_script:
+  - npm install --dev
+script:
+  - npm test
